--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "core-js": "^2.4.1",
-    "rxjs": "^5.0.1",
+    "rxjs": "latest",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.7.2",
+    "firebase": "latest",
+    "angularfire2": "latest"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.3.1",
